--- a/index.html
+++ b/index.html
@@ -186,8 +186,8 @@
         margin-left: 0px;
     }
     .us{
-        margin-left: -1150px;
-        margin-top: -10px;
+        margin-left: -1125px;
+        margin-top: 7px;
     }
 }
 @media screen and (min-width: 769px) {
@@ -220,10 +220,10 @@
     </div>
 <div class="nav">
     <a href="#" class="a">Home</a>&nbsp;&nbsp;
-    <a href="About.html" target="_blank" class="a">About</a>&nbsp;&nbsp;
-    <a href="Contact.html" target="_blank" class="a">Contact</a>&nbsp;&nbsp;
+    <a href="About.html" class="a">About</a>&nbsp;&nbsp;
+    <a href="Contact.html" class="a">Contact</a>&nbsp;&nbsp;
     <div class="us">
-    <a href="https://docs.google.com/forms/d/e/1FAIpQLSfzK24oZoWVseVEUSWSmpYn8ntTtvGShGHNfgpsT96cz_vSOg/viewform" target="_blank" class="a3"><button class="btn1" style="width: 70px;">Upgrade&nbsp;</button></a>
+    <a href="https://docs.google.com/forms/d/e/1FAIpQLSfzK24oZoWVseVEUSWSmpYn8ntTtvGShGHNfgpsT96cz_vSOg/viewform" class="a3"><button class="btn1" style="width: 70px;">Upgrade&nbsp;</button></a>
 </div>
 </div>
 <div class="con">
