--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
     <a href="About.html" class="a">About</a>&nbsp;&nbsp;
     <a href="Contact.html" class="a">Contact</a>&nbsp;&nbsp;
     <div class="us">
-    <a href="https://docs.google.com/forms/d/e/1FAIpQLSfzK24oZoWVseVEUSWSmpYn8ntTtvGShGHNfgpsT96cz_vSOg/viewform" class="a3"><button class="btn1" style="width: 70px;">Upgrade&nbsp;</button></a>
+    <a href="https://docs.google.com/forms/d/e/1FAIpQLSfzK24oZoWVseVEUSWSmpYn8ntTtvGShGHNfgpsT96cz_vSOg/viewform" class="a3"><button class="btn1" style="display: none;">Upgrade&nbsp;</button></a>
 </div>
 </div>
 <div class="con">
